llvm/test/aqs-7.llvm.bc.err
/Users/cmk/llvm/bin/llvm-as: llvm/test/aqs-7.llvm:13:36: error: use of undefined value '%else'
  br i1 %letmp, label %then, label %else
                                   ^
